# trading

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  release.yml
config/: gai.conf  market_holidays.yaml  settings.yaml
scripts/: stage10_verify.py  stage11_verify.py  stage3_verify.py  stage4_verify.py  stage6_verify.py
trading_bot/: __init__.py  config.py  logging_setup.py  main.py  smoke_test.py
trading_bot/bot/: commands.py  commands_config.py  commands_core.py  commands_creds.py  commands_export.py  commands_funda.py  commands_holiday.py  commands_init.py  commands_logs.py  commands_mode.py  commands_set.py  commands_style.py  commands_universe.py  commands_update.py  context.py  expiry.py  formatters.py  keyboards.py  mode_switch.py  poller.py  quiet_mode.py  runtime_state.py  style_switch.py  universe_helper.py  update_manager.py
trading_bot/kis/: auth.py  client.py
trading_bot/notify/: markdown_escape.py  telegram.py
trading_bot/risk/: kill_switch.py  manager.py
trading_bot/signals/: accuracy.py  briefing.py  cost_alert.py  cycle.py  exit_constants.py  exit_strategy.py  fill_tracker.py  fundamentals.py  indicators.py  llm.py  prefilter.py
trading_bot/store/: backup.py  db.py  repo.py
trading_bot/utils/: atomic_io.py  calendar_kr.py  holiday_sync.py
